--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,19 @@
-doctype 5
+doctype html
 html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDf7Q0VyGUbeEpknXulcLsBdBMgT4AQZgE&sensor=true")
+    script(type="text/javascript").
+      function initialize() {
+        var mapOptions = {
+          center: new google.maps.LatLng(-34.397, 150.644),
+          zoom: 8
+        };
+        var map = new google.maps.Map(document.getElementById("map-canvas"),
+            mapOptions);
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+    
