--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,4 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxNWkQW4R5jRZ51_iYnAWvEKA8hVGHF2s&sensor=true")
+    script(type="text/javascript").
+
     script(src="js/vendor/require.min.js", data-main="js/main")
