--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,9 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet", href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css")
+
   body
     block content
-    script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxNWkQW4R5jRZ51_iYnAWvEKA8hVGHF2s&sensor=true")
-    script(type="text/javascript").
-
+    script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDf7Q0VyGUbeEpknXulcLsBdBMgT4AQZgE&sensor=true")
     script(src="js/vendor/require.min.js", data-main="js/main")
