more ui, more progress

--- a/public/templates/list.mustache.html
+++ b/public/templates/list.mustache.html
@@ -1,9 +1,8 @@
 <ul class="list-ul">
     {{#data}}
     <li class="list-item" data-id="{{id}}">
-        <span class="title">{{Title}}</span>
-        <span class="location">{{Locations}}</span>
-        <span class="year">{{Release Year}}</span>
+        <div><span class="title">{{Title}}</span><div>
+        <div><span>Locations: </span><span class="location">{{Locations}}</span></div>
     </li>
     {{/data}}
 </ul>
