--- a/public/templates/main.mustache.html
+++ b/public/templates/main.mustache.html
@@ -8,6 +8,8 @@
 <div class="content">
          <!--views go here-->
     <div id="list"></div>
-    <div id="map"></div>
+    <div id="map">
+    	<div id="map-canvas"></div>
+    </div>
 
 </div>
