pagination and ui tweak

--- a/public/templates/main.mustache.html
+++ b/public/templates/main.mustache.html
@@ -1,6 +1,9 @@
-<nav class="top-bar">
-    <button id="previous"><span>Previous</span></button>
-    <button id="next"><span>Next</span></button>
+<nav class="top-bar" style="display:none">
+	<div class="page-control">
+	    <button id="previous" class="control-btn"><span>Previous</span></button>
+	    <span id="page-text"></span>
+	    <button id="next" class="control-btn"><span>Next</span></button>
+	</div>
     <div class="ui-widget">
         <input type="text" id="search-for-movie" placeholder="Search movies"/>
     </div>
