--- a/public/templates/list.mustache.html
+++ b/public/templates/list.mustache.html
@@ -1,8 +1,8 @@
-<ul class="list-ul">
+<ul class="list-ul" style="margin-top: -5px;">
     {{#data}}
     <li class="list-item" data-id="{{id}}">
         <div><span class="title">{{Title}}</span><div>
-        <div><span>Locations: </span><span class="location">{{Locations}}</span></div>
+        <div><span class="location">{{Locations}}</span></div>
     </li>
     {{/data}}
 </ul>
